[gd_scene load_steps=5 format=2]

[ext_resource path="res://Image/images_faculdade/atividade_Inflacao.png" type="Texture" id=1]
[ext_resource path="res://Image/images_faculdade/Confirma.png" type="Texture" id=2]
[ext_resource path="res://Image/images_faculdade/erro.png" type="Texture" id=3]
[ext_resource path="res://Faculdade/Scripts/atividade_Inflacao.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta1_p1" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 395.0
margin_top = 200.0
margin_right = 486.0
margin_bottom = 231.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta2_p1" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 494.0
margin_top = 199.0
margin_right = 586.0
margin_bottom = 232.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta1_p2" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 396.0
margin_top = 309.0
margin_right = 684.0
margin_bottom = 350.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta2_p2" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 396.0
margin_top = 358.0
margin_right = 684.0
margin_bottom = 400.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta1_p3" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 396.0
margin_top = 489.0
margin_right = 486.0
margin_bottom = 522.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="resposta2_p3" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 494.0
margin_top = 490.0
margin_right = 586.0
margin_bottom = 522.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="respostaCerta1" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 620.0
margin_top = 195.0
margin_right = 660.0
margin_bottom = 235.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="respostaCerta2" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 523.0
margin_top = 399.0
margin_right = 563.0
margin_bottom = 439.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="respostaCerta3" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 620.0
margin_top = 485.0
margin_right = 660.0
margin_bottom = 525.0
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="erro_p1" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 620.0
margin_top = 196.0
margin_right = 660.0
margin_bottom = 236.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="erro_p2" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 522.0
margin_top = 399.0
margin_right = 562.0
margin_bottom = 439.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="erro_p3" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
visible = false
margin_left = 621.0
margin_top = 485.0
margin_right = 661.0
margin_bottom = 525.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="voltar" type="Button" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 699.0
margin_top = 21.0
margin_right = 728.0
margin_bottom = 51.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="acertos" type="Label" parent="ParallaxBackground/ParallaxLayer"]
margin_left = 566.0
margin_top = 540.0
margin_right = 599.0
margin_bottom = 571.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta1_p1" to="." method="_on_resposta1_p1_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta2_p1" to="." method="_on_resposta2_p1_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta1_p2" to="." method="_on_resposta1_p2_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta2_p2" to="." method="_on_resposta2_p2_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta1_p3" to="." method="_on_resposta1_p3_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/resposta2_p3" to="." method="_on_resposta2_p3_pressed"]
[connection signal="pressed" from="ParallaxBackground/ParallaxLayer/voltar" to="." method="_on_voltar_pressed"]
